<resources>
    <string name="app_name">multitasker</string>
    <string name="app_name_text">multi-tasker</string>

    <string name="_edit">Редактирование</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="enter">Вход</string>
    <string name="_continue">Продолжить</string>

    <string name="email_address">Адрес электронной почты</string>
    <string name="launch_registering">Регистрация</string>
    <string name="launch_title"> <b>Multi-Tasker \n “Самый удобный” инструмент \nдля отслеживания ваших \nзадач</b></string>
    <string name="launch_rules_use">Используя приложение, вы подтверждаете, что \nсогласны с <b><u>Политикой конфиденциальности</u></b> и \n<u><b>Правилами использования приложения</b></u></string>

    <string name="login_authorization">Авторизация</string>
    <string name="login_password">Пароль</string>
    <string name="login_forgot_password">Забыли пароль?</string>
    <string name="login_no_acc_register">Нет аккаунта? <b><u>Зарегистрируйтесь</u></b></string>

    <string name="registration_registration">Регистрация</string>
    <string name="registration_have_acc_input">Уже есть аккаунт? <b><u>Войдите</u></b></string>

    <string name="recovery_password">Восстановление пароля</string>
    <string name="recovery_password_code">Введите код</string>
    <string name="recovery_password_new_password">Новый пароль</string>
    <string name="recovery_password__repeat_new_password">Повторите новый пароль</string>

    <string name="registration_repeat_password">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрирация</string>
    <string name="registration_agreement">Регистрируясь в приложении, вы подтверждаете, что \nсогласны с <b><u>Политикой конфиденциальности</u></b> и \n<u><b>Правилами использования приложения</b></u></string>
    <string name="registration_have_acc">Уже есть аккаунт?<u><b> Войдите</b></u></string>

    <string name="general_error">Ошибка получения данных</string>
    <string name="error_network">Что-то не так с вашим интернет-соединением</string>
    <string name="error_server">Сервер недоступен</string>
    <string name="error_smt_go_wrong">Что-то пошло не так</string>
    <string name="error_network_subtitle">Проверьте подключение к интернету</string>
    <string name="error_server_subtitle">Извините, попробуйте позже</string>
    <string name="error_smt_go_wrong_subtitle">Попробуйте позже</string>

    <string name="error_email">Адрес электронной почты введен неверно!</string>
    <string name="error_password">Пароль введен неверно!</string>
    <string name="error_new_password">Новый пароль введен неверно!</string>
    <string name="error_old_password">Старый пароль введен неверно!</string>
    <string name="error">Ошибка</string>
    <string name="different_passwords">Пароли не совпадают</string>
    <string name="error_code">Количество символов должно быть 6!</string>
    <string name="error_name">Имя введено неверно</string>

    <string name="my">Моё</string>
    <string name="appointed">Назначено</string>
    <string name="calendar">Календарь</string>
    <string name="profile">Профиль</string>

    <string name="go_out">Выйти</string>
    <string name="name_profile">Имя Фамилия</string>
    <string name="your_profile">Ваш профиль</string>
    <string name="edit_name">Редактировать имя</string>
    <string name="edit_password_">Изменить пароль</string>
    <string name="edit_email">Редактировать Email</string>
    <string name="edit_password">Сменить пароль</string>
    <string name="name">ИМЯ</string>
    <string name="save">Сохранить</string>
    <string name="email">EMAIL</string>
    <string name="old_password">СТАРЫЙ ПАРОЛЬ</string>
    <string name="new_password">НОВЫЙ ПАРОЛЬ</string>
    <string name="repeat_new_password">ПОВТОРИТЕ НОВЫЙ ПАРОЛЬ</string>

    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="delete">Удалить</string>
    <string name="categories">Категории</string>
    <string name="create_category">Создание категории</string>
    <string name="create_project_">Создание проекта</string>
    <string name="create_task_">Создание задачи</string>
    <string name="create_subtask_">Создание подзадачи</string>
    <string name="create_project">Создать проект</string>
    <string name="task">Задача</string>
    <string name="subtask">Подзадача</string>
    <string name="name_category">НАЗВАНИЕ КАТЕГОРИИ</string>
    <string name="name_project">НАЗВАНИЕ ПРОЕКТА</string>
    <string name="name_task">НАЗВАНИЕ ЗАДАЧИ</string>
    <string name="name_subtask_">НАЗВАНИЕ ПОДЗАДАЧИ</string>
    <string name="description_task">ОПИСАНИЕ ЗАДАЧИ</string>
    <string name="description">ОПИСАНИЕ</string>
    <string name="description_subtask">ОПИСАНИЕ ПОДЗАДАЧИ</string>
    <string name="name_subtask">ПОДЗАДАЧИ</string>
    <string name="period_of_execution_task">СРОК ИСПОЛНЕНИЯ</string>
    <string name="importance_task">ВАЖНОСТЬ ЗАДАЧИ</string>
    <string name="importance_subtask">ВАЖНОСТЬ ПОДЗАДАЧИ</string>
    <string name="executor_task">ИСПОЛНИТЕЛЬ</string>
    <string name="select_color_category">ВЫБЕРИТЕ ЦВЕТ КАТЕГОРИИ</string>
    <string name="parent_task">РОДИТЕЛЬСКАЯ ЗАДАЧА</string>
    <string name="name_category_hint">Введите название категории</string>
    <string name="name_project_hint">Введите название проекта</string>
    <string name="name_task_hint">Введите название задачи</string>
    <string name="name_subtask_hint">Введите название подзадачи</string>
    <string name="description_task_hint">Введите описание задачи</string>
    <string name="description_subtask_hint">Введите описание подзадачи</string>
    <string name="period_of_execution_task_hint">Выберите срок исполнения</string>
    <string name="create_category_">Создать категорию</string>
    <string name="create_task">Создать задачу</string>
    <string name="cancel_">Отменить</string>
    <string name="delete_category">Удалить категорию</string>
    <string name="delete_task">Удалить задачу</string>
    <string name="delete_subtask">Удалить подзадачу</string>
    <string name="edit">Редактирование</string>
    <string name="edit_task">Редактировать данные</string>
    <string name="urgently_4">Очень срочно</string>
    <string name="urgently_3">Срочно</string>
    <string name="urgently_2">Может подождать</string>
    <string name="urgently_1">Несрочно</string>
    <string name="executor_task_view">Исполнитель</string>
    <string name="choose_executor">Выберите исполнителя</string>
    <string name="author_task_view">Автор</string>
    <string name="edit_executor"> <b>ИЗМЕНИТЬ</b></string>
    <string name="created">Созданно %1$s</string>
    <string name="updated">Обновлено %1$s</string>
    <string name="subtaskCount"><u><b>ПОДЗАДАЧИ (%1$s)</b></u></string>
    <string name="appointed_title">Назначенные</string>
    <string name="appointment_completed">%1$s задач/ %2$s выполненно</string>

    <plurals name="plurals_project">
        <item quantity="one">%1$d проект</item>
        <item quantity="two">%1$d проекта</item>
        <item quantity="few">%1$d проекта</item>
        <item quantity="many">%1$d проектов</item>
        <item quantity="other">%1$d проектов</item>
    </plurals>
</resources>