<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/myFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_icon_my"
        android:iconTint="@color/ic_action_bar"
        android:title="@string/my" />

    <item
        android:id="@+id/appointedFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_icon_calendar"
        android:iconTint="@color/ic_action_bar"
        android:title="@string/appointed" />

    <item
        android:id="@+id/calendarFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_icon_appointed"
        android:iconTint="@color/ic_action_bar"
        android:title="@string/calendar" />

    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/bottom_navigation_icon_profile"
        android:iconTint="@color/ic_action_bar"
        android:title="@string/profile" />

</menu>