<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView

        android:id="@+id/iv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="159dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/im_header" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/iv_header"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tv_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/registration"
            android:textColor="@color/light_black"
            android:textSize="24sp" />





            <com.google.android.material.textfield.TextInputEditText
                android:background="@drawable/background_frame"
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="16dp"
                android:padding="16dp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/light_black"
                android:textSize="16sp"

                />





        <com.google.android.material.textfield.TextInputEditText
        android:background="@drawable/background_frame"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
            android:padding="16dp"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        />



            <com.google.android.material.textfield.TextInputEditText

                android:background="@drawable/background_frame"
                android:id="@+id/et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="46dp"
                android:padding="16dp"
                android:hint="@string/registration_repeat_password"
                android:inputType="textPassword"
                android:textColor="@color/light_black"
                android:textSize="16sp"
                />




        <androidx.appcompat.widget.AppCompatButton
            android:background="@drawable/background_black_button"
            android:id="@+id/btn_register"
            style="@style/buttonH100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:paddingVertical="18dp"/>


        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="59dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/registration_agreement"
            android:textAlignment="center"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <View
        android:layout_marginBottom="29dp"
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tv_have_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_marginBottom="59dp"
        android:id="@+id/tv_have_register"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/registration_have_acc"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:layout_marginEnd="24dp"
        android:id="@+id/ib_close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/iv_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/close" />
</androidx.constraintlayout.widget.ConstraintLayout>