<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="164dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        app:boxStrokeErrorColor="@color/red"
        app:errorEnabled="true"
        app:errorTextColor="@color/red"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/ubuntu_medium"
            android:hint="@string/name_project_hint"
            android:maxLength="100"
            android:padding="16dp"
            android:textColor="@color/light_black"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_name_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/name_project"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/til_name"
        app:layout_constraintStart_toStartOf="@+id/til_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_project"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_black_button_enabled"
        android:paddingVertical="18dp"
        android:text="@string/create_project"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/buttonH100"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/background_gray_button"
        android:paddingVertical="18dp"
        android:text="@string/cancel_"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>