<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/launch_title"
        android:textAlignment="center"
        android:textColor="@color/light_black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_emblem" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_black_button_enabled"
        android:paddingVertical="18dp"
        android:text="@string/enter"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_registration"
        style="@style/buttonH100"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/background_gray_button"
        android:paddingVertical="18dp"
        android:text="@string/launch_registering"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_emblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="54dp"
        android:maxWidth="310dp"
        android:maxHeight="310dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/im_main" />
</androidx.constraintlayout.widget.ConstraintLayout>